[gd_scene load_steps=22 format=3 uid="uid://dpqt28su4bwy8"]

[ext_resource type="Script" path="res://scripts/presentation/slide_19.gd" id="1_ua07i"]
[ext_resource type="PackedScene" uid="uid://cgyjq7a7ynipa" path="res://entities/platformer/background_forest.tscn" id="2_3g0wv"]
[ext_resource type="PackedScene" uid="uid://ccqtm8bdkybun" path="res://entities/platformer/sukafu.tscn" id="3_c05c4"]
[ext_resource type="PackedScene" uid="uid://b2yww2imuxtf1" path="res://entities/platformer/button.tscn" id="4_6uvu0"]
[ext_resource type="PackedScene" uid="uid://dhtjypfknsqdc" path="res://entities/platformer/tilesets/tile_chao_3.tscn" id="5_jfe5g"]
[ext_resource type="PackedScene" uid="uid://cxc7g1ndjxw8e" path="res://entities/platformer/tilesets/tile_chao_4.tscn" id="6_72cl8"]
[ext_resource type="PackedScene" uid="uid://oay1l4xts8mn" path="res://entities/platformer/tilesets/tile_chao.tscn" id="7_iih05"]
[ext_resource type="PackedScene" uid="uid://bd1r5mwr7hgpt" path="res://entities/platformer/tilesets/tile_chao_2.tscn" id="8_skmau"]
[ext_resource type="FontFile" uid="uid://ds75s7jxtajce" path="res://fonts/CFSamuraiBob-Regular.ttf" id="9_0q18p"]
[ext_resource type="Texture2D" uid="uid://co0qu5tnikt7p" path="res://images/presentation/sukafu_godot.png" id="11_11ddj"]
[ext_resource type="Texture2D" uid="uid://bhdjo7t3600he" path="res://images/presentation/tween/tween0.png" id="12_woy1m"]
[ext_resource type="Texture2D" uid="uid://dtevni8dmgdut" path="res://images/presentation/tween/tween1.png" id="13_3w8xq"]
[ext_resource type="Texture2D" uid="uid://sacd2g0ml2mo" path="res://images/presentation/tween/tween2.png" id="14_rtdn8"]
[ext_resource type="PackedScene" uid="uid://cb0rovwav0ygx" path="res://entities/platformer/next_slide.tscn" id="14_uccry"]
[ext_resource type="FontFile" uid="uid://bsnrkwhtr554m" path="res://fonts/Helvetica Neue 67 Medium Condensed.otf" id="14_wfrhu"]
[ext_resource type="Texture2D" uid="uid://cj6hk7k1nggka" path="res://images/presentation/tween/tween3.png" id="16_pw38f"]
[ext_resource type="Texture2D" uid="uid://7264bt3bfmx0" path="res://images/presentation/tween/tween4.png" id="17_1shbu"]
[ext_resource type="Texture2D" uid="uid://c0vt835551ftu" path="res://images/presentation/tween/tween5.png" id="18_qw6qd"]
[ext_resource type="Texture2D" uid="uid://cqoegt726tkfe" path="res://images/presentation/tween/tween6.png" id="19_xvk32"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_d8qva"]
scenes/1/scene = ExtResource("7_iih05")
scenes/2/scene = ExtResource("8_skmau")
scenes/3/scene = ExtResource("5_jfe5g")
scenes/4/scene = ExtResource("6_72cl8")

[sub_resource type="TileSet" id="TileSet_q5h88"]
tile_size = Vector2i(128, 32)
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetScenesCollectionSource_d8qva")

[node name="Slide19" type="Node2D"]
script = ExtResource("1_ua07i")

[node name="Background" parent="." instance=ExtResource("2_3g0wv")]

[node name="Tween0" type="Sprite2D" parent="."]
position = Vector2(960, 152)
scale = Vector2(0.920553, 0.908764)
texture = ExtResource("12_woy1m")

[node name="Tween1" type="Sprite2D" parent="."]
position = Vector2(1552, 480)
scale = Vector2(0.648148, 0.648148)
texture = ExtResource("13_3w8xq")

[node name="Tween2" type="Sprite2D" parent="."]
position = Vector2(2440, 520)
scale = Vector2(0.614286, 0.614286)
texture = ExtResource("14_rtdn8")

[node name="Tween3" type="Sprite2D" parent="."]
position = Vector2(3240, 280)
texture = ExtResource("16_pw38f")

[node name="Tween4" type="Sprite2D" parent="."]
position = Vector2(4048, 280)
scale = Vector2(0.8, 0.8)
texture = ExtResource("17_1shbu")

[node name="Tween5" type="Sprite2D" parent="."]
position = Vector2(4416, 456)
scale = Vector2(0.8, 0.8)
texture = ExtResource("18_qw6qd")

[node name="Tween6" type="Sprite2D" parent="."]
position = Vector2(4784, 262)
scale = Vector2(0.8, 0.8)
texture = ExtResource("19_xvk32")

[node name="Button1" parent="." instance=ExtResource("4_6uvu0")]
position = Vector2(592, 666)

[node name="Button2" parent="." instance=ExtResource("4_6uvu0")]
position = Vector2(1701.89, 666)

[node name="Button3" parent="." instance=ExtResource("4_6uvu0")]
position = Vector2(2216, 666)

[node name="Button5" parent="." instance=ExtResource("4_6uvu0")]
position = Vector2(4224, 666)

[node name="Button6" parent="." instance=ExtResource("4_6uvu0")]
position = Vector2(4416, 666)

[node name="Button7" parent="." instance=ExtResource("4_6uvu0")]
position = Vector2(4600, 666)

[node name="Button4" parent="." instance=ExtResource("4_6uvu0")]
position = Vector2(3216, 666)

[node name="Sprite1" type="Sprite2D" parent="."]
position = Vector2(616, 352)
scale = Vector2(0.476744, 0.476744)
texture = ExtResource("11_11ddj")

[node name="Sprite2" type="Sprite2D" parent="."]
position = Vector2(1992, 352)
scale = Vector2(0.476744, 0.476744)
texture = ExtResource("11_11ddj")

[node name="Sprite3" type="Sprite2D" parent="."]
position = Vector2(4432, 184)
scale = Vector2(0.476744, 0.476744)
texture = ExtResource("11_11ddj")

[node name="TweenTitle" type="Label" parent="."]
offset_left = 2984.0
offset_top = 520.0
offset_right = 3564.0
offset_bottom = 643.0
scale = Vector2(0.8, 0.8)
theme_override_colors/font_color = Color(0.545098, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.160784)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("14_wfrhu")
theme_override_font_sizes/font_size = 80
text = "Pressione o bot√£o"
horizontal_alignment = 1

[node name="Sukafu" parent="." node_paths=PackedStringArray("ground_tilemap") instance=ExtResource("3_c05c4")]
position = Vector2(24, 640)
collision_mask = 3
ground_tilemap = NodePath("../ground")

[node name="ground" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource("TileSet_q5h88")
format = 2
layer_0/tile_data = PackedInt32Array(1376256, 0, 65536, 1376257, 0, 65536, 1376258, 0, 65536, 1376259, 0, 65536, 1376260, 0, 65536, 1376261, 0, 65536, 1376262, 0, 65536, 1376263, 0, 65536, 1376264, 0, 65536, 1376265, 0, 65536, 1376266, 0, 65536, 1376267, 0, 65536, 1376268, 0, 65536, 1441792, 0, 131072, 1441793, 0, 131072, 1441794, 0, 131072, 1441795, 0, 131072, 1507332, 0, 131072, 1507333, 0, 131072, 1507334, 0, 131072, 1507335, 0, 131072, 1507336, 0, 131072, 1507337, 0, 131072, 1507338, 0, 131072, 1507339, 0, 131072, 1507340, 0, 131072, 1441804, 0, 131072, 1441803, 0, 131072, 1441802, 0, 131072, 1441801, 0, 131072, 1441800, 0, 131072, 1441799, 0, 131072, 1441798, 0, 131072, 1441797, 0, 131072, 1441796, 0, 131072, 1507331, 0, 131072, 1507330, 0, 131072, 1507329, 0, 131072, 1507328, 0, 131072, 1572863, 0, 131072, 1507327, 0, 131072, 1441791, 0, 131072, 1376255, 0, 131072, 1310719, 0, 131072, 1245183, 0, 131072, 1179647, 0, 131072, 1114111, 0, 131072, 1048575, 0, 131072, 983039, 0, 131072, 917503, 0, 131072, 851967, 0, 131072, 786431, 0, 131072, 720895, 0, 131072, 655359, 0, 131072, 589823, 0, 131072, 524287, 0, 131072, 458751, 0, 131072, 393215, 0, 131072, 327679, 0, 131072, 262143, 0, 131072, 196607, 0, 131072, 131071, 0, 131072, 65535, 0, 131072, 1507341, 0, 131072, 1441805, 0, 131072, 1376269, 0, 65536, -1, 0, 131072, -65536, 0, 131072, -65535, 0, 131072, -65534, 0, 131072, -65533, 0, 131072, -65532, 0, 131072, -65531, 0, 131072, -65530, 0, 131072, -65529, 0, 131072, -65528, 0, 131072, -65527, 0, 131072, -65526, 0, 131072, -65525, 0, 131072, -65524, 0, 131072, -65523, 0, 131072, -65522, 0, 131072, -65521, 0, 131072, -65520, 0, 131072, 1376272, 0, 65536, 1441808, 0, 131072, 1507344, 0, 131072, 1507343, 0, 131072, 1507342, 0, 65536, 1441806, 0, 131072, 1441807, 0, 131072, 1376270, 0, 65536, 1376271, 0, 65536, 1376273, 0, 65536, 1376274, 0, 65536, 1376275, 0, 65536, 1376276, 0, 65536, 1441809, 0, 131072, 1441810, 0, 131072, 1441811, 0, 131072, 1441812, 0, 131072, 1507348, 0, 131072, 1507347, 0, 131072, 1507346, 0, 131072, 1507345, 0, 131072, -65516, 0, 131072, -65519, 0, 131072, -65518, 0, 131072, -65517, 0, 131072, 1376277, 0, 65536, 1376278, 0, 65536, 1376279, 0, 65536, 1376280, 0, 65536, 1376281, 0, 65536, 1376282, 0, 65536, 1376283, 0, 65536, 1376284, 0, 65536, 1376285, 0, 65536, 1376286, 0, 65536, 1376287, 0, 65536, 1376288, 0, 65536, 1376289, 0, 65536, 1376290, 0, 65536, 1376291, 0, 65536, 1376292, 0, 65536, 1376293, 0, 65536, 1441813, 0, 131072, 1441814, 0, 131072, 1441815, 0, 131072, 1441816, 0, 131072, 1441817, 0, 131072, 1441818, 0, 131072, 1441819, 0, 131072, 1441820, 0, 131072, 1441821, 0, 131072, 1441822, 0, 131072, 1441823, 0, 131072, 1441824, 0, 131072, 1441825, 0, 131072, 1441826, 0, 131072, 1441827, 0, 131072, 1441828, 0, 131072, 1441829, 0, 131072, 1507365, 0, 131072, 1507364, 0, 131072, 1507363, 0, 131072, 1507362, 0, 131072, 1507349, 0, 131072, 1507350, 0, 131072, 1507351, 0, 131072, 1507352, 0, 131072, 1507353, 0, 131072, 1507354, 0, 131072, 1507355, 0, 131072, 1507356, 0, 131072, 1507357, 0, 131072, 1507358, 0, 131072, 1507359, 0, 131072, 1507361, 0, 131072, 1507360, 0, 131072, -65515, 0, 131072, -65514, 0, 131072, -65513, 0, 131072, -65512, 0, 131072, -65511, 0, 131072, -65510, 0, 131072, -65509, 0, 131072, -65508, 0, 131072, -65507, 0, 131072, -65506, 0, 131072, -65505, 0, 131072, -65504, 0, 131072, -65501, 0, 131072, -65502, 0, 131072, -65503, 0, 131072, -65499, 0, 131072, -65500, 0, 131072, 1441830, 0, 131072, 1441831, 0, 131072, 1441832, 0, 131072, 1441833, 0, 131072, 1507369, 0, 131072, 1507368, 0, 131072, 1507367, 0, 131072, 1507366, 0, 131072, 1376294, 0, 65536, 1376295, 0, 65536, 1376296, 0, 65536, 1376297, 0, 65536, 1310761, 0, 131072, 1245225, 0, 131072, 1179689, 0, 131072, 1114153, 0, 131072, 1048617, 0, 131072, 983081, 0, 131072, 917545, 0, 131072, 852009, 0, 131072, 786473, 0, 131072, 720937, 0, 131072, 655401, 0, 131072, 589865, 0, 131072, 524329, 0, 131072, 458793, 0, 131072, 393257, 0, 131072, 327721, 0, 131072, 262185, 0, 131072, 196649, 0, 131072, 131113, 0, 131072, 65577, 0, 131072, 41, 0, 131072, -65495, 0, 131072, -65498, 0, 131072, -65497, 0, 131072, -65496, 0, 131072)

[node name="Title" type="Label" parent="."]
offset_left = 31.0
offset_top = 12.0
offset_right = 1531.0
offset_bottom = 135.0
scale = Vector2(0.8, 0.8)
theme_override_colors/font_color = Color(0.545098, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_0q18p")
theme_override_font_sizes/font_size = 110
text = "TWEEN"

[node name="NextSlide" parent="." instance=ExtResource("14_uccry")]
position = Vector2(5248, 632)
